@@ -1,3 +1,14 @@
+2006-12-28  Jeroen Frijters  <jeroen@frijters.net>
+
+	* javax/net/ssl/SSLServerSocketFactory.java:
+	(getDefault): Return inoperative factory instead of throwing error
+	(as per spec).
+	(ErrorServerSocketFactory): New class.
+	* javax/net/ssl/SSLSocketFactory.java:
+	(getDefault): Return inoperative factory instead of throwing error
+	(as per spec).
+	(ErrorSocketFactory): New class.
+
 2006-12-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* java/util/AbstractMap.java:
